--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -26,6 +26,28 @@ img {
 .col-12{
     width: 100%;
 }
+button, a{
+    cursor: pointer;
+}
+input{
+    height: 50px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:10px 0;
+    border-radius: var(--radius);
+}
+.btn{
+    height: 40px;
+    padding: 0 20px;
+    border: 2px solid var(--dark);
+    border-radius: var(--radius);
+    font-weight: bold;
+    font-size: 1rem;
+    outline: none;
+    background: var(--light);
+}
 .all-items {
     width: 100%;
     height: 100%;
